Mon Feb 23 15:26:39 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_split_m): raise ArgumentError at broken string
	  not RegexpError, as Regexp is not involved in.
	  [ruby-core:68229] [Bug #10886]

Mon Feb 23 07:25:29 2015  Benoit Daloze  <eregontp@gmail.com>

	* time.c: Zone encoding should be US-ASCII if all 7-bits. Fix r46907.

	* test/ruby/test_time.rb, test/ruby/test_time_tz.rb: Update tests.

Sun Feb 22 18:33:42 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* common.mk: use ruby organization for rubyspec.

Sun Feb 22 15:56:06 2015  Kazuki Tsujimoto  <kazuki@callcc.net>

	* vm_insnhelper.c (rb_vm_rewrite_cref_stack): copy nd_refinements
	  of original crefs. It fixes segmentation fault when calling
	  refined method in duplicate module. [ruby-dev:48878] [Bug #10885]

	* vm_core.h, class.c: change accordingly.

	* test/ruby/test_refinement.rb: add a test for above.

Sun Feb 22 10:43:37 2015  Koichi Sasada  <ko1@atdot.net>

	* gc.c (rb_objspace_call_finalizer): control GC execution during
	  force firnalizations at the end of interpreter process.
	  [Bug #10768]

	  1) Prohibit incremental GC while running Ruby-level finalizers
	     to avoid any danger.
	  2) Prohibit GC while invoking T_DATA/T_FILE data structure
	     because these operations break object relations consistency.

	  This patch can introduce another memory consuming issue because
	  Ruby-level finalizers can run after (2), GC is disabled.
	  However, basically object consistency was broken at (2) as I
	  described above. So that running Ruby-level finalizers contains
	  danger originally. Because of this point, I need to suggest to
	  remove these 3 lines (invoking remaining finalizers). And add a
	  rule to add that finalizers should not add new finalizers, or
	  say there is no guarantee to invoke finalizers that added by
	  another finalizer.

Sun Feb 22 04:07:05 2015  Zachary Scott  <e@zzak.io>

	* ext/openssl/ossl_asn1.c: [DOC] RDoc formatting fixes for